task8/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    creationTimestamp: "2024-02-12T15:05:33Z"
    generation: 2
    name: final-exam
    namespace: azizbek
    resourceVersion: "4977798"
    uid: 0e4754d4-cf01-4a20-a78f-846cd8d96969
  spec:
    rules:
    - host: linuxuser.uz
      http:
        paths:
        - backend:
            service:
              name: final-exam
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.233.24.114
kind: List
metadata:
  resourceVersion: ""
